# dakicartons_interview_test_python

./: README.md  pyproject.toml
dakricartons/: utils.py
data_processing/: moving_average.py
machine_status/: main.py
machine_status_api/: main.py
tests/: test_average.py
